[gd_scene load_steps=23 format=3 uid="uid://dnu30hiwkyirr"]

[ext_resource type="Script" path="res://scripts/character_creator.gd" id="1_s55j1"]
[ext_resource type="Texture2D" uid="uid://dsejldsq25ale" path="res://testures/jettelly_space_nebulas_blue_DOWN.png" id="2_6unky"]
[ext_resource type="PackedScene" uid="uid://co7hvomrytuox" path="res://scenes/character/BaseBody.tscn" id="2_qn3l2"]
[ext_resource type="PackedScene" uid="uid://dg70cxyv7mw4c" path="res://scenes/GUI/select_tile.tscn" id="3_0hrr5"]
[ext_resource type="Texture2D" uid="uid://dubpcu41n8qh2" path="res://testures/Buttons/9PatchRect.png" id="4_l5weg"]
[ext_resource type="Texture2D" uid="uid://bf864whnn1y8w" path="res://testures/Buttons/SelectDefault.png" id="5_cewax"]
[ext_resource type="Texture2D" uid="uid://3kdb2hb5knuf" path="res://testures/Buttons/BackDefault.png" id="5_feght"]
[ext_resource type="PackedScene" uid="uid://dcqfpos07o6o3" path="res://assets/podium.blend" id="5_s3qcq"]
[ext_resource type="Texture2D" uid="uid://ckp7fy2ws8dm7" path="res://testures/Buttons/RandomizeDefault.png" id="6_3gxat"]
[ext_resource type="Texture2D" uid="uid://rn8ktm1mhnia" path="res://testures/Buttons/BackPressed.png" id="6_fqu35"]
[ext_resource type="Texture2D" uid="uid://bb6dj5rj10wi5" path="res://testures/Buttons/SelectPressed.png" id="6_wux51"]
[ext_resource type="Texture2D" uid="uid://cv7aw4qmlopf4" path="res://testures/Buttons/RandomizePressed.png" id="7_2d3lv"]
[ext_resource type="Texture2D" uid="uid://dbwwmmpc7qm1l" path="res://testures/Buttons/BackHover.png" id="7_5p43d"]
[ext_resource type="Texture2D" uid="uid://dc5ek4qivwuyu" path="res://testures/Buttons/SelectHover.png" id="7_cmb5t"]
[ext_resource type="Texture2D" uid="uid://d0db48y8djbxd" path="res://testures/Buttons/BackSelected.png" id="8_avd1n"]
[ext_resource type="Texture2D" uid="uid://cmumuix5q2p3d" path="res://testures/Buttons/RandomizeHover.png" id="8_c8reo"]
[ext_resource type="Texture2D" uid="uid://diq3vd2tvoi5l" path="res://testures/Buttons/SelectSelected.png" id="8_so5hy"]
[ext_resource type="Texture2D" uid="uid://cp17lk4hhk2e3" path="res://testures/Buttons/RandomizeSelection.png" id="9_nd5f1"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_fkls4"]
panorama = ExtResource("2_6unky")
energy_multiplier = 1.35

[sub_resource type="Sky" id="Sky_tapux"]
sky_material = SubResource("PanoramaSkyMaterial_fkls4")

[sub_resource type="Environment" id="Environment_7020l"]
background_mode = 2
sky = SubResource("Sky_tapux")
ambient_light_source = 1
tonemap_mode = 2

[sub_resource type="Curve3D" id="Curve3D_owncb"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -0.625, 1, 1.3, -0.64, 0, 0, 0.605, 0, 0, 0, 1, 2, 0, 0, 0, 0.662, 0, 0, 0.625, 1, 1.3),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="CharacterCreator" type="Node3D"]
script = ExtResource("1_s55j1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7020l")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.741705, 0.0222026, -0.670359, -0.0331448, 0.999444, -0.0035703, 0.669907, 0.024867, 0.742029, -0.582887, 1.09234, 1.28205)
projection = 1
size = 2.19063

[node name="BaseBody" parent="." instance=ExtResource("2_qn3l2")]
transform = Transform3D(0.967845, 0, -0.251546, 0, 1, 0, 0.251546, 0, 0.967845, 0, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.868424, 0, 0.495822, 0.0624864, 0.992027, -0.109444, -0.491869, 0.126026, 0.8615, 1.77487, 0.688058, 1.30481)
light_energy = 1.575

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(0.827659, 0, -0.561231, -0.0916733, 0.986569, -0.135192, 0.553694, 0.163343, 0.816543, -1.78077, 0.597875, 1.9557)
light_energy = 1.675

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(-0.812898, 0, 0.582407, 0, 1, 0, -0.582407, 0, -0.812898, 1.97595, 1.1483, -1.63141)

[node name="SpotLight3D4" type="SpotLight3D" parent="."]
transform = Transform3D(-0.700909, 0, -0.71325, 0, 1, 0, 0.71325, 0, -0.700909, -2.82692, 1.04997, -0.735092)

[node name="SpotLight3D5" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.64713, 0)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -292.0
offset_right = 390.0
offset_bottom = 212.0
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 0

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_l5weg")

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Pick your look"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 359.945)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Name" type="Label" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Name:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Janusz"

[node name="Hair" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Eyebrows" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Eyes" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Mouth" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Body" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Accessory" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_0hrr5")]
layout_mode = 2

[node name="Control2`" type="Control" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Randomize" type="TextureButton" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("6_3gxat")
texture_pressed = ExtResource("7_2d3lv")
texture_hover = ExtResource("8_c8reo")
texture_focused = ExtResource("9_nd5f1")

[node name="Control" type="Control" parent="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Control" type="Control" parent="GUI"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="GUI/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -45.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Join" type="TextureButton" parent="GUI/Control/MarginContainer2"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
texture_normal = ExtResource("5_cewax")
texture_pressed = ExtResource("6_wux51")
texture_hover = ExtResource("7_cmb5t")
texture_focused = ExtResource("8_so5hy")

[node name="MarginContainer3" type="MarginContainer" parent="GUI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 40

[node name="Back" type="TextureButton" parent="GUI/Control/MarginContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_feght")
texture_pressed = ExtResource("6_fqu35")
texture_hover = ExtResource("7_5p43d")
texture_focused = ExtResource("8_avd1n")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_owncb")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-0.745927, 0, -0.666005, 0, 0.999978, 0, 0.666006, 0, -0.745926, -0.625, 1, 1.3)
cubic_interp = false
loop = false

[node name="CameraPosition" type="Marker3D" parent="Path3D/PathFollow3D"]

[node name="FocusPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.003, 1, 0)

[node name="podium" parent="." instance=ExtResource("5_s3qcq")]

[connection signal="text_changed" from="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="GUI/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainer/Randomize" to="." method="_on_randomize_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer2/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer3/Back" to="." method="_on_back_pressed"]
